--- a/securityexam/src/main/resources/templates/login.html
+++ b/securityexam/src/main/resources/templates/login.html
@@ -11,7 +11,15 @@
 <form action="/loginProc" method="post">
 	<input type="text" name="username" />
 	<input type="password" name="password" />
-	<button>로그인</button>
+	<button>로그인</button><br/>
+<a href="/oauth2/authorization/naver">
+    네이버 로그인하기
+</a>
+&nbsp;
+<a href="/oauth2/authorization/kakao">
+    카카오 로그인하기
+</a>
+
 </form>
 </body>
 </html>
